# llama_cu_awq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  convert_awq_to_bin.py  gpu_kernels.h  library.cu  llama2_q4.cu  llama2_q4.vcxproj  llama2_q4_opt.cu  perplexity.h  sampler.h  test.cs  test.py  tokenizer.h  transformer.h  weight_packer.cpp
sycl/: Makefile  README.md  common.h  gpu_kernels.h  llama2_q4.sycl.cpp  perplexity.h  sampler.h  tokenizer.h
